fix: Update overflow hidden

--- a/src/styles/pages/search.scss
+++ b/src/styles/pages/search.scss
@@ -31,6 +31,7 @@
   }
   .inner {
     margin-top: 40px;
+    overflow: hidden;
     a {
       color: #fff;
       position: relative;
